_Source/force-app/main/default/objects/BI_Objectives__c/BI_Objectives__c.object-meta.xml
<CustomObject>
    <label>Objective</label>
    <nameField>
        <label>Objectives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>