_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>BI_Account_Plan__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>