_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Account_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Search_Field__c</fullName>
    <label>Account Search Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>