_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_AccountId__c.field-meta.xml
<CustomField>
    <fullName>BI_AccountId__c</fullName>
    <formula>BI_Account__r.Id</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>