_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>BI_Actual_Cost__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Actual cost of commissions, discount and/or amenities</inlineHelpText>
    <label>xActual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>