_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_Actual_Value__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Actual additional sales generated by objective</inlineHelpText>
    <label>xActual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>