_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>BI_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>