_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Division__c</fullName>
    <description>The Sales Division on the objective owner&apos;s user record</description>
    <formula>TEXT(Owner:User.BI_Objective_Division__c)</formula>
    <inlineHelpText>The Sales Division on the objective owner&apos;s user record</inlineHelpText>
    <label>Division</label>
    <type>Text</type>
</CustomField>