_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Divisional_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Divisional_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divisional Plan</label>
    <referenceTo>BI_Divisional_Plan__c</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>