_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_DivisionalPlanId__c.field-meta.xml
<CustomField>
    <fullName>BI_DivisionalPlanId__c</fullName>
    <formula>BI_Territory_Plan__r.BI_Regional_Plan__r.BI_Divisional_Plan__r.Id</formula>
    <label>DivisionalPlanId</label>
    <type>Text</type>
</CustomField>