_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_End_Date__c</fullName>
    <label>Target Date (if known &amp; applicable)</label>
    <type>Date</type>
</CustomField>