_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>BI_Estimated_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Estimated cost of commissions, discount and/or amenities</inlineHelpText>
    <label>xEstimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>