_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_Estimated_Value__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Estimated additional sales generated by objective</inlineHelpText>
    <label>xEstimated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>