_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Focus_Accounts__c.field-meta.xml
<CustomField>
    <fullName>BI_Focus_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Accounts</label>
    <type>Checkbox</type>
</CustomField>