_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Is_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>BI_Is_Current_Year__c</fullName>
    <description>Value set to true indicating the  objective is for this year</description>
    <formula>If(
(
(Text(Year(Today())) = Text(BI_Divisional_Plan__r.BI_Divisional_Plan_Year__c)) || 
(Text(Year(Today())) = Text(BI_Account_Plan__r.BI_Plan_Year__c)) || 
(Text(Year(Today())) = Text(BI_Regional_Plan__r.BI_Regional_Plan_Year__c)) ||
(Text(Year(Today())) = Text(BI_Territory_Plan__r.BI_Territory_Plan_Year__c))),
true,
false
)</formula>
    <label>Is Current Year</label>
    <type>Checkbox</type>
</CustomField>