_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Lookup_Identifier__c.field-meta.xml
<CustomField>
    <fullName>BI_Lookup_Identifier__c</fullName>
    <description>This field is used to provide additional details to help identify the objective, especially when selecting the objective in a lookup field on another record.</description>
    <formula>IF(!ISBLANK(BI_Territory_Plan__c), 
BI_Objective_Type__r.Name &amp; &quot; - &quot; &amp;   BI_Template_Objective_Desc_From_Type__c , 

IF(!ISBLANK(BI_Regional_Plan__c), 
BI_Objective_Type__r.Name &amp; &quot; - &quot; &amp;  BI_Template_Objective_Desc_From_Type__c, &quot;abc&quot;





) 

)</formula>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>