_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Objective_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BI_Objective_Category__c.BI_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objective_Category__c</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>