_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Objective_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Description__c</fullName>
    <label>Objective Strategy &amp; Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>