_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Objective_Owner__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Owner__c</fullName>
    <formula>Owner:User.LastName + &apos; &apos; +  Owner:User.FirstName</formula>
    <label>Objective Owner</label>
    <type>Text</type>
</CustomField>