_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Objective_Owner_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Owner_Employee_Id__c</fullName>
    <formula>Owner:User.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Owner Employee Id</label>
    <type>Text</type>
</CustomField>