_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (((2 AND 3) OR (4 AND 5) OR (6 AND 7)) OR 8 OR 9 OR 10)</booleanFilter>
        <errorMessage>The selected Objective Type is not valid for the type of Plan you are creating this Objective On</errorMessage>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Lookup_Identifier__c</field>
            <operation>contains</operation>
            <value>Territory Plan</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Territory Objective</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Lookup_Identifier__c</field>
            <operation>contains</operation>
            <value>Regional Plan</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Regional Objective</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Lookup_Identifier__c</field>
            <operation>contains</operation>
            <value>Divisional Plan</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Divisional Objective</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Lookup_Identifier__c</field>
            <operation>notContain</operation>
            <value>Plan</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Objective</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Description__c</field>
            <operation>equals</operation>
            <value>(2019)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objective_Type__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>