_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Owner_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Sales_Division__c</fullName>
    <formula>TEXT( Owner:User.BI_Objective_Division__c )</formula>
    <label>Owner Sales Division</label>
    <type>Text</type>
</CustomField>