_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Owner_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Sales_Region__c</fullName>
    <formula>Owner:User.Sales_Region__c</formula>
    <label>Owner Sales Region</label>
    <type>Text</type>
</CustomField>