_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Parent_Objective__c.field-meta.xml
<CustomField>
    <fullName>BI_Parent_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Objective</label>
    <referenceTo>BI_Objectives__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Parent_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>