_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_ParentAccountId__c.field-meta.xml
<CustomField>
    <fullName>BI_ParentAccountId__c</fullName>
    <formula>BI_Account__r.Parent.Id</formula>
    <label>ParentAccountId</label>
    <type>Text</type>
</CustomField>