_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Part_of_my_Team__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_my_Team__c</fullName>
    <formula>IF ( OR($User.Id = OwnerId, $User.Id = Owner:User.ManagerId, $User.Id = Owner:User.Manager.ManagerId,$User.Id = Owner:User.Manager.Manager.ManagerId, $User.Id = Owner:User.Manager.Manager.Manager.ManagerId ,$User.Id = Owner:User.Manager.Manager.Manager.Manager.ManagerId ,$User.Id = Owner:User.Manager.Manager.Manager.Manager.Manager.ManagerId ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of my Team</label>
    <type>Checkbox</type>
</CustomField>