_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>BI_Plan_Year__c</fullName>
    <description>This field is set pro grammatically via BI_PushAccountObjectives class to populate the plan year of the existing plan that the objective is linked to, so that it can be used to to auto link the objective to an account, since the formula field for Related Plan&apos;s Plan Year won&apos;t be populated on the before Insert event, yet.</description>
    <label>Plan Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>