_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Regional_Plan_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Regional_Plan_Owner_Id__c</fullName>
    <formula>BI_Regional_Plan__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Plan Owner Id</label>
    <type>Text</type>
</CustomField>