_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_RelatedPlan_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>BI_RelatedPlan_Plan_Year__c</fullName>
    <formula>IF(!ISBLANK(BI_Territory_Plan__c), 
TEXT(BI_Territory_Plan__r.BI_Territory_Plan_Year__c), 

IF(!ISBLANK(BI_Regional_Plan__c), 
TEXT(BI_Regional_Plan__r.BI_Regional_Plan_Year__c), 



if(!ISBLANK(BI_Divisional_Plan__c), 
TEXT(BI_Divisional_Plan__r.BI_Divisional_Plan_Year__c), 
&apos;&apos;)

)

)</formula>
    <label>Related Plan&apos;s Plan Year</label>
    <type>Text</type>
</CustomField>