_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>BI_Sales_Organization__c</fullName>
    <description>Objective Owner&apos;s Sales Organization on his/her user record</description>
    <formula>Owner:User.User_Region__c</formula>
    <inlineHelpText>Objective Owner&apos;s Sales Organization on his/her user record</inlineHelpText>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>