_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xStart Date</label>
    <type>Date</type>
</CustomField>