_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Template_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>