_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Template_Objective_Desc_From_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Template_Objective_Desc_From_Type__c</fullName>
    <formula>&quot;BI_Objective_Type__r.BI_Description__c&quot;</formula>
    <label>Template Objective Desc From Type</label>
    <type>Text</type>
</CustomField>