_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_Template_Objective_Name_From_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Template_Objective_Name_From_Type__c</fullName>
    <description>This field is used in plan handler classes to update objective names when the plan owner is changed and owner of all objectives should be changed. This field helps update the objective names when the objective owner changed.</description>
    <formula>&quot;BI_Objective_Type__r.BI_Objective_Name__c&quot;</formula>
    <label>Template Objective Name From Type</label>
    <type>Text</type>
</CustomField>