_Source/force-app/main/default/objects/BI_Objectives__c/fields/BI_TerritoryPlanId__c.field-meta.xml
<CustomField>
    <fullName>BI_TerritoryPlanId__c</fullName>
    <formula>BI_Territory_Plan__r.Id</formula>
    <label>TerritoryPlanId</label>
    <type>Text</type>
</CustomField>