_Source/force-app/main/default/objects/BI_Objectives__c/recordTypes/BI_Account_Objecitve.recordType-meta.xml
<RecordType>
    <fullName>BI_Account_Objecitve</fullName>
    <active>true</active>
    <description>Objective record type used to capture Account Objectives.</description>
    <label>Account Objective</label>
</RecordType>