_Source/force-app/main/default/objects/BI_Objectives__c/recordTypes/BI_Divisional_Objective.recordType-meta.xml
<RecordType>
    <fullName>BI_Divisional_Objective</fullName>
    <active>true</active>
    <description>Objective record type used to capture Divisional Objectives.</description>
    <label>Divisional Objective</label>
</RecordType>