_Source/force-app/main/default/objects/BI_Objectives__c/recordTypes/BI_Regional_Objective.recordType-meta.xml
<RecordType>
    <fullName>BI_Regional_Objective</fullName>
    <active>true</active>
    <description>Objective record type used to track Regional Objectives.</description>
    <label>Regional Objective</label>
</RecordType>