_Source/force-app/main/default/objects/BI_Objectives__c/recordTypes/BI_Territory_Objective.recordType-meta.xml
<RecordType>
    <fullName>BI_Territory_Objective</fullName>
    <active>true</active>
    <description>Objective record type used to track Regional Objectives.</description>
    <label>Territory Objective</label>
</RecordType>