_Source/force-app/main/default/objects/BI_Objectives__c/validationRules/End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Start_Date</fullName>
    <active>true</active>
    <description>The End date must be greater than or equal to the Start date.</description>
    <errorConditionFormula>BI_End_Date__c &lt; BI_Start_Date__c</errorConditionFormula>
    <errorMessage>Please ensure the End Date is greater than or equal to the Start Date.</errorMessage>
</ValidationRule>