_Source/force-app/main/default/objects/BI_Objectives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BI_RelatedPlan_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Objective_Owner__c</columns>
    <columns>BI_Lookup_Identifier__c</columns>
    <columns>BI_Objective_Category__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Objectives</label>
</ListView>