_Source/force-app/main/default/objects/BI_Objectives__c/listViews/My_Objectives_All.listView-meta.xml
<ListView>
    <fullName>My_Objectives_All</fullName>
    <columns>BI_RelatedPlan_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Lookup_Identifier__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>BI_Objective_Category__c</columns>
    <columns>BI_Objective_Description__c</columns>
    <columns>BI_Focus_Accounts__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Objectives - All</label>
</ListView>