_Source/force-app/main/default/objects/BI_Objectives__c/listViews/My_Objectives_Current_Region.listView-meta.xml
<ListView>
    <fullName>My_Objectives_Current_Region</fullName>
    <columns>BI_RelatedPlan_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Lookup_Identifier__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>BI_Target_Value__c</columns>
    <columns>BI_End_Date__c</columns>
    <columns>BI_Objective_Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BI_Objectives__c.BI_Regional_Objective</value>
    </filters>
    <filters>
        <field>BI_RelatedPlan_Plan_Year__c</field>
        <operation>equals</operation>
        <value>2019,2020</value>
    </filters>
    <label>My Objectives - Current (Region)</label>
</ListView>