_Source/force-app/main/default/objects/BI_Objectives__c/listViews/Team_Objectives_Reporting_to_me_All.listView-meta.xml
<ListView>
    <fullName>Team_Objectives_Reporting_to_me_All</fullName>
    <columns>BI_RelatedPlan_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Lookup_Identifier__c</columns>
    <columns>BI_Objective_Owner__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>BI_Objective_Description__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Part_of_my_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Team (Reporting to me) - All</label>
</ListView>