_Source/force-app/main/default/objects/BI_Objectives__c/listViews/Team_Reporting_to_me_Current_REG.listView-meta.xml
<ListView>
    <fullName>Team_Reporting_to_me_Current_REG</fullName>
    <columns>BI_RelatedPlan_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Lookup_Identifier__c</columns>
    <columns>BI_Objective_Owner__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>BI_Target_Value__c</columns>
    <columns>BI_End_Date__c</columns>
    <columns>BI_Objective_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Part_of_my_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BI_RelatedPlan_Plan_Year__c</field>
        <operation>equals</operation>
        <value>2019,2020</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BI_Objectives__c.BI_Regional_Objective</value>
    </filters>
    <label>Team (Reporting to me) - Current: REG</label>
</ListView>